# expert-rating

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  bugs_data.json  bugs_report.txt  deploy.sh  deploy_key  deploy_key.pub  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint-backend.sh  migration_helper.py  promtail-config.yaml  pyproject.toml
.github/workflows/: cd-pipeline.yml  ci-pipeline.yml
alembic/: env.py
alembic/versions/: 3e945d22519c_create_initial_tables.py
app/: main.py
app/core/: dependencies.py
app/crud/: expert_crud.py
app/models/: all_models.py
app/schemas/: expert_schemas.py
app/services/: notifier.py
expert-rating-frontend/: .eslintrc.cjs  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1762611024050-15f1ebf73ca34.mjs  vite.config.js.timestamp-1770403190954-f53c1dfa19ebb.mjs  vk-hosting-config.json
expert-rating-frontend/.storybook/: main.js  preview.jsx  vitest.setup.js
expert-rating-frontend/src/: App.js  App.jsx  App.tsx  AppConfig.js  AppConfig.jsx  AppConfig.tsx  main.js  main.jsx  main.tsx  routes.js  routes.jsx  types.ts  utils.js  utils.jsx  vite-env.d.ts
migrations/: env.py
migrations/versions/: 136af79a7d96_create_mailings_table.py  13e4342c131f_add_event_date_to_event_model.py  161fd223c572_tariff_table.py  174fa35c84eb_add_rating_type_to_social.py  179f5f433913_refactor_db_structure.py  1ac59f76c6dd_initial_schema.py  5a8ffc1a3979_a.py  (+18 more)
mockups/: expert_profile.html  index.html  registration.html  voting.html
src/: main.py
(+175 files in other folders)
